--- a/views/staffs/edit.hbs
+++ b/views/staffs/edit.hbs
@@ -6,4 +6,22 @@
     <label>Full Name</label>
     <input type='text' class='form-control' name='fullname' placeholder='Full Name' value='{{staff.fullname}}'>
 </div>
+<div class='form-group'>
+    <label>Email</label>
+    <input type='text' class='form-control' name="email" placeholder="Email" value='{{staff.email}}'>
+</div>
+<div class='form row'>
+    <div class='form-group-col-md-6'>
+        <label>Mobile</label>
+        <input type="number" class="form-control" name="mobile" placeholder="Mobile" value="{{staff.mobile}}">
+    </div>
+    <div class="form-group-col-md-6">
+        <label>City</label>
+        <input type="number" class="form-control" name="city" placeholder="City" value="{{staff.city}}">
+</div>
+</div>
+<div class="form-group">
+   <button type="submit" class="btn btn-info">Submit</button>
+   <a class="btn btn-secondary" href="/staff/list">View all</a>
+</div>
 </form>
