--- a/views/layouts/mainlayout.hbs
+++ b/views/layouts/mainlayout.hbs
@@ -22,10 +22,10 @@
         }
     </style>
 </head>
-<body>
-    <body-class="bg-info">
-        <div id= "box" class="col-md-6 offset-md-3">
-            {{{body}}}
-        </div>
-</body-class=>
+
+<body-class="bg-info">
+    <div id= "box" class="col-md-6 offset-md-3">
+        {{{body}}}
+    </div>
+</body>
 </html>
