--- a/views/staffs/edit.hbs
+++ b/views/staffs/edit.hbs
@@ -13,11 +13,11 @@
 <div class='form row'>
     <div class='form-group-col-md-6'>
         <label>Mobile</label>
-        <input type="number" class="form-control" name="mobile" placeholder="Mobile" value="{{staff.mobile}}">
+        <input type="tel" class="form-control" name="mobile" placeholder="Mobile" value="{{staff.mobile}}">
     </div>
     <div class="form-group-col-md-6">
         <label>City</label>
-        <input type="number" class="form-control" name="city" placeholder="City" value="{{staff.city}}">
+        <input type="text" class="form-control" name="city" placeholder="City" value="{{staff.city}}">
 </div>
 </div>
 <div class="form-group">
