--- a/views/staffs/list.hbs
+++ b/views/staffs/list.hbs
@@ -11,9 +11,9 @@
     <tbody>
         {{#each list}}
         <tr>
-            <td>{{this.FullName}}</td>
+            <td>{{this.fullName}}</td>
             <td>{{this.email}}</td>
-            <td>{{this.Mobile}}</td>
+            <td>{{this.mobile}}</td>
             <td>{{this.city}}</td>
             <td>
                 <a class="btn btn-primary btn-sm" href="/staff/{{this.id}}">Edit</a>
