--- a/views/staffs/list.hbs
+++ b/views/staffs/list.hbs
@@ -11,7 +11,7 @@
     <tbody>
         {{#each list}}
         <tr>
-            <td>{{this.fullName}}</td>
+            <td>{{this.fullname}}</td>
             <td>{{this.email}}</td>
             <td>{{this.mobile}}</td>
             <td>{{this.city}}</td>
